--- a/deploy-63cc194b3d2957250a813b22/index.html
+++ b/deploy-63cc194b3d2957250a813b22/index.html
@@ -486,8 +486,15 @@
                   <div class="contact-info-item padd-15">
                     <div class="icon"><i class="bi bi-globe"></i></div>
                    <h4>Website</h4>
-                   <p><a href="http://ikubswears.netlify.app">http://ikubswears.netlify.app</a></p>
+                   <p><a href="https://emmycinematics.netlify.app/">http://emmycinematic.netlify.app</a></p>
                   </div>
+
+                  <div class="contact-info-item padd-15">
+                    <div class="icon"><i class="bi bi-globe"></i></div>
+                   <h4>Github</h4>
+                   <p>alvintongman24</p>
+                  </div>
+
 
               </div>
 
